--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
+    "react-number-format": "^5.4.2",
     "yup": "^1.4.0"
   },
   "devDependencies": {
