--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/react-copy-to-clipboard": "^5.0.7",
     "formik": "^2.4.6",
     "next": "15.0.3",
     "react": "^18.3.1",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
     "react-number-format": "^5.4.2",
+    "react-toastify": "^10.0.6",
     "yup": "^1.4.0"
   },
   "devDependencies": {
